add interface frontend for create screen

--- a/frontend/creating.html
+++ b/frontend/creating.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
+	<link rel="stylesheet" type="text/css" href="./css/interface.css">
     <script src="js/blockly/node_modules/blockly/blockly_compressed.js"></script>
     <script src="js/blockly/node_modules/blockly/blocks_compressed.js"></script>
     <script src="js/blockly/node_modules/blockly/javascript_compressed.js"></script>
@@ -29,7 +30,30 @@
         </content>
 
         <content class="content-interface content_hidden">
-            interface
+            <div class="content-interface__sidebar">
+                <div class="sidebar__item">
+                    <div class="item__icon"></div>
+                    <div class="item__text">Element 1</div>
+                </div>
+                <div class="sidebar__item">
+                    <div class="item__icon"></div>
+                    <div class="item__text">Element 2</div>
+                </div>
+                <div class="sidebar__item">
+                    <div class="item__icon"></div>
+                    <div class="item__text">Element 3</div>
+                </div>
+                <div class="sidebar__item">
+                    <div class="item__icon"></div>
+                    <div class="item__text">Element 4</div>
+                </div>
+            </div>
+            <div class="content-interface__field">
+                <div class="field__elem">
+                    Element 1
+                    <div class="elem__id">id: 0</div>
+                </div>
+            </div>
         </content>
     </div>
 
