implement dynamic creating of interface elements

--- a/frontend/creating.html
+++ b/frontend/creating.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="body">
     <base href=".">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,22 +30,10 @@
 
         <content class="content-interface content_hidden">
             <div class="content-interface__sidebar">
-                <div class="sidebar__item">
-                    <div class="item__icon"></div>
-                    <div class="item__text">Element 1</div>
-                </div>
-                <div class="sidebar__item">
-                    <div class="item__icon"></div>
-                    <div class="item__text">Element 2</div>
-                </div>
-                <div class="sidebar__item">
-                    <div class="item__icon"></div>
-                    <div class="item__text">Element 3</div>
-                </div>
-                <div class="sidebar__item">
-                    <div class="item__icon"></div>
-                    <div class="item__text">Element 4</div>
-                </div>
+                <!-- <div class="sidebar__item"> -->
+                <!--     <div class="item__icon"></div> -->
+                <!--     <div class="item__text">Element 1</div> -->
+                <!-- </div> -->
             </div>
             <div class="content-interface__field">
 
