--- a/frontend/creating.html
+++ b/frontend/creating.html
@@ -30,6 +30,43 @@
 
         <content class="content-interface content_hidden">
             <div class="content-interface__sidebar">
+                <div class="sidebar__elements">
+
+                    <!-- sidebar elements here -->
+
+                </div>
+                <div class="sidebar__menu sidebar__menu_hidden">
+                    <div class="menu__title">Title</div>
+                    <div class="menu__type">type:</div>
+                    <div class="menu__g-id menu__input">
+                        <label for="g-id">ID:</label>
+                        <input tabindex="1" type="text" name="g_id" id="" class="g-id__input menu-input">
+                    </div>
+                    <div class="menu__dx menu__input">
+                        <label for="dx">X pos:</label>
+                        <input tabindex="2" type="text" name="dx" id="" class="dx__input menu-input">
+                    </div>
+                    <div class="menu__dy menu__input">
+                        <label for="dy">Y pos:</label>
+                        <input tabindex="3" type="text" name="dy" id="" class="dy__input menu-input">
+                    </div>
+                    <div class="menu__width menu__input">
+                        <label for="width">Width:</label>
+                        <input tabindex="4" type="text" name="width" id="" class="width__input menu-input">
+                    </div>
+                    <div class="menu__height menu__input">
+                        <label for="height">Height:</label>
+                        <input tabindex="5" type="text" name="height" id="" class="height__input menu-input">
+                    </div>
+                    <div class="menu__value menu__input">
+                        <label for="value">Value:</label>
+                        <input tabindex="5" type="text" name="value" id="" class="value__input menu-input">
+                    </div>
+                    <div class="menu__buttons">
+                        <div class="button menu__delete-button">Delete</div>
+                        <div class="button menu__close-button">Close</div>
+                    </div>
+                </div>
             </div>
             <div class="content-interface__field">
 
