implement updating elements state on changing value in editor

--- a/frontend/creating.html
+++ b/frontend/creating.html
@@ -42,6 +42,10 @@
                         <label for="g-id">ID:</label>
                         <input tabindex="1" type="text" name="g_id" id="" class="g-id__input menu-input">
                     </div>
+                    <div class="menu__value menu__input">
+                        <label for="value">Value:</label>
+                        <input tabindex="5" type="text" name="value" id="" class="value__input menu-input">
+                    </div>
                     <div class="menu__dx menu__input">
                         <label for="dx">X pos:</label>
                         <input tabindex="2" type="text" name="dx" id="" class="dx__input menu-input">
@@ -58,13 +62,9 @@
                         <label for="height">Height:</label>
                         <input tabindex="5" type="text" name="height" id="" class="height__input menu-input">
                     </div>
-                    <div class="menu__value menu__input">
-                        <label for="value">Value:</label>
-                        <input tabindex="5" type="text" name="value" id="" class="value__input menu-input">
-                    </div>
                     <div class="menu__buttons">
-                        <div class="button menu__delete-button">Delete</div>
-                        <div class="button menu__close-button">Close</div>
+                        <div class="button button-accent menu__delete-button">Delete</div>
+                        <div class="button button-accent menu__close-button">Close</div>
                     </div>
                 </div>
             </div>
